fix overflow of embedded content

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,14 +36,13 @@ span.menu-bar {
 }
 
 #inputBlock { width: 440px; float: right; }
-#page.edit #outputBlock { width: 440px; float: left; margin: 0; }
+#page.edit #outputBlock { width: 440px; float: left; margin: 0; overflow: hidden}
 
 #output pre {
     border: 2px solid gray;
     display: block;
     background-color: #F5F5DC;
     padding: 5px 10px;
-    overflow: hidden;
 }
 
 #output table {
@@ -75,6 +74,6 @@ textarea {
 
 #footer {
     clear: both;
-    margin-top: 10px;
+    margin: 10px 0;
     text-align:center;
 }
